2012-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDT.h, src/RcppBDT.cpp: prefix local #define
	variable with RcppBDT_ to avoid any possivke clashes

	* inst/include/RcppBDT.h, src/RcppBDT.cpp: remove exception
	specifications in partial specializations for as and wrap

2012-03-30  Romain Francois  <romain@r-enthusiasts.com>

	* R/zzz.R, RcppBDT.cpp, NAMESPACE, DESCRIPTION: update module
	initialization

2011-01-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): bumped to 0.1.0 for first CRAN upload

2011-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R: added print and format methods
	* man/bdt.Rd: documented print and format methods
	* demo/RcppBDT.R: simplied thanks to format method

2011-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R (.onLoad): import module, construct from class 'date'
	* demo/RcppBDT.R: adjusted accordingly

	* R/constants.R: define date constants here and not in zzz.R

	* cleanup: added simple cleanup script

2011-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): bumped version to 0.0.3

	* R/zzz.R: change initialization after borrowing a better approach
	from John's wls package in the Rcpp repo on R-Forge: now 'bdt' is
	the default instance of the reference class, and the module code is
	available via 'bdtMod'

2011-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppBDT-package.Rd: updated
	* man/dateFunctions.Rd: added documentation on functions
	* man/constants.Rd: added documentation on constants defined
	* man/bdtEnv.Rd: added documentation for bdtEnv variable

	* src/RcppBDT.cpp: Added two new functions for date of first and last
	weekday in a given month and year (eg first Friday in Jan 2011)

	* R/zzz.R:
	  - defined a number of constants: Sun, Mon, Tue, ... , Sat as well
  	    as Jan, Feb, ..., Dec and first, second, ..., fifth
	  - added some documentation on enviroment

	* R/bdt.R:
	  - added function to export core object for access