@@ -1,7 +1,11 @@
+2012-06-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/zzz.R: Updated for R 2.15.1 using loadModule() and evalqOnLoad()
+
 2012-04-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/RcppBDT.h, src/RcppBDT.cpp: prefix local #define
-	variable with RcppBDT_ to avoid any possivke clashes
+	variable with RcppBDT_ to avoid any possible clashes
 
 	* inst/include/RcppBDT.h, src/RcppBDT.cpp: remove exception
 	specifications in partial specializations for as and wrap
